Updated pom and jenkinsfil v02