@@ -1,117 +1,50 @@
-pipeline
-{
+pipeline {
     agent any
 
-    tools{
+    tools {
         maven 'maven'
-        }
+    }
 
-    stages
-    {
-        stage('Build')
-        {
-            steps
-            {
-                 git 'https://github.com/jglick/simple-maven-project-with-tests.git'
-                 sh "mvn -Dmaven.test.failure.ignore=true clean package"
-            }
-            post
-            {
-                success
-                {
-                    junit '**/target/surefire-reports/TEST-*.xml'
-                    archiveArtifacts 'target/*.jar'
-                }
+    stages {
+        stage('Deploy to QA') {
+            steps {
+                echo 'deploy to qa'
             }
         }
-
-        stage("Deploy to Dev"){
-            steps{
-                echo("deploy to Dev")
-            }
-        }
-
-
-
-
-        stage("Deploy to QA"){
-            steps{
-                echo("deploy to qa")
-            }
-        }
-
-
 
         stage('Run Regression Automation Tests') {
             steps {
                 catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-                    git 'https://github.com/naveenanimation20/Feb2024POMSeries.git'
-                    sh "mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/test_regression.xml"
-
+                    git 'https://github.com/rakeshbabuvs/Selenium-TestNG-POM-Framework.git'
+                    sh "mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunner/test_regression.xml --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
                 }
             }
         }
 
-
         stage('Publish Allure Reports') {
-           steps {
+            steps {
                 script {
                     allure([
                         includeProperties: false,
                         jdk: '',
                         properties: [],
                         reportBuildPolicy: 'ALWAYS',
-                        results: [[path: '/allure-results']]
+                        results: [[path: 'allure-results']]
                     ])
                 }
             }
         }
 
-
-        stage('Publish Extent Report'){
-            steps{
-                     publishHTML([allowMissing: false,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'reports',
-                                  reportFiles: 'TestExecutionReport.html',
-                                  reportName: 'HTML Regression Extent Report',
-                                  reportTitles: ''])
-            }
-        }
-
-        stage("Deploy to Stage"){
-            steps{
-                echo("deploy to Stage")
-            }
-        }
-
-        stage('Run Sanity Automation Tests') {
+        stage('Publish Extent Report') {
             steps {
-                catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-                    git 'https://github.com/naveenanimation20/Feb2024POMSeries.git'
-                    sh "mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/test_sanity.xml"
-
-                }
+                publishHTML([allowMissing: false,
+                             alwaysLinkToLastBuild: false,
+                             keepAll: true,
+                             reportDir: 'reports',
+                             reportFiles: 'TestExecutionReport.html',
+                             reportName: 'HTML Regression Extent Report',
+                             reportTitles: ''])
             }
         }
-
-
-
-        stage('Publish sanity Extent Report'){
-            steps{
-                     publishHTML([allowMissing: false,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'reports',
-                                  reportFiles: 'TestExecutionReport.html',
-                                  reportName: 'HTML Sanity Extent Report',
-                                  reportTitles: ''])
-            }
-        }
-
-
-
-
     }
 }
